created the basic layout and wrote logic to allow users to place ships and attack enemy ships.

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <header>
-        <h2 id="title-heading">Battleship (the board game !)</h2>
+        <h2 id="title-heading">Battleship, the board game</h2>
     </header>
-    <main>
-        
+    <main id="default">
+        <button id="start-btn">Play!</button>
     </main>
     <script src="script.js"></script>
 </body>
