implemented a dialog box to alert the user when they have won/lost. now gonna animate the transition of it. made sunken ships distinguishable on the board.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,12 @@
     <main id="default">
         <button id="start-btn">Play!</button>
     </main>
+    <dialog>
+        <div id="dialog-wrapper">
+            <p id="dialog-txt"></p>
+            <button id="dialog-btn">New Game</button>
+        </div>
+    </dialog>
     <script src="script.js"></script>
 </body>
 </html>
